add stripe payment gateway

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.1",
-    "slug": "^8.2.3"
+    "slug": "^8.2.3",
+    "stripe": "^14.1.0"
   }
 }
